--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,7 @@
 /*===============================================*/
 /* 01. GENERAL			 						 */
 /*===============================================*/
+
 body{
 	font-family: 'Arvo', serif;	
 	color:#6a6a6a;
@@ -2978,6 +2979,7 @@ button.mfp-close, button.mfp-arrow {
 /* 99. OPTION SETTING							 */
 /*===============================================*/
 #options-setting{
+	display: none;
 	position:fixed; 
 	width:300px;  
 	padding:25px; 
