--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,18 @@
 /* 01. GENERAL			 						 */
 /*===============================================*/
 
+@media only screen and (max-width: 600px) {
+	.couple-down {
+		background-position-x: 90% !important;
+	}
+	.img-thanks {
+		background-position-x: 34% !important;
+	}
+	#photo-divider-1 div {
+		height: 360px !important;
+	}
+}
+
 body{
 	font-family: 'Arvo', serif;	
 	color:#6a6a6a;
@@ -1450,6 +1462,7 @@ hr.line-divider{
 	width:100%;
 	margin:0 auto; 
 	margin-top:20px;
+	/* margin-top: 130px; */
 	margin-bottom:20px;
 	text-align:center;
 }
